Added live stock searching
